--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <!-- image -->
 
             <div class="images"> <!-- second division for image -->
-                <img id="shape" src="./images/WhatsApp Image 2023-10-16 at 15.01.36_c11cdb2a.jpg" alt="shape">
+                <img id="shape" src="./images/WhatsApp Image 2023-10-16 at 15.01.36_c11cdb2a.JPG" alt="shape">
                 
             </div>
         </section>
