--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
                 <!-- tag for downloading cv,  a tag have an attribute named dwonload -->
                 <a class="download"
-                    href="https://drive.google.com/file/d/1JqyTgZOjCy50Xyc0xQg9LcPhtj_/view?usp=sharing"
+                    href="httpssharing"
                     target="_blank" review>DOWNLOAD CV</a>
 
             </div>
@@ -64,7 +64,7 @@
                 <!-- images -->
 
                 <div class="about_image">
-                    <img src="./images/png.png" alt="img">
+                    <img src="./images/489168.JPG" alt="img">
                 </div>
 
                 <!--  content-->
