--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <!-- image -->
 
             <div class="images"> <!-- second division for image -->
-                <img id="shape" src="./images.html/WhatsApp Image 2023-10-16 at 15.01.36_c11cdb2a.jpg" alt="shape">
+                <img id="shape" src="./images.html/WhatsApp Image 2023-10-16 at 15.01.36_c11cdb2a.JPG" alt="shape">
                 
             </div>
         </section>
@@ -64,7 +64,7 @@
                 <!-- images -->
 
                 <div class="about_image">
-                    <img src="./images.html/489168.jpg" alt="img">
+                    <img src="./images.html/489168.JPG" alt="img">
                 </div>
 
                 <!--  content-->
